--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                      </div>
                      <div class="col-md-6 margin_bottom">
                         <div class="work">
-                           <figure><img src="images/img3.jpg" alt="#" /></figure>
+                           <figure><img src="images/img3.JPG" alt="#" /></figure>
                         </div>
                         <div class="work_text">
                            <h3>Transportation<br> <span class="blu">Scholar Transport</span></h3>
